--- a/Mejirodai/mejirodai.ui
+++ b/Mejirodai/mejirodai.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>928</width>
+    <width>969</width>
     <height>549</height>
    </rect>
   </property>
@@ -21,49 +21,6 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="5" column="2">
-     <widget class="QStackedWidget" name="opponent_stackedWidget">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="currentIndex">
-       <number>0</number>
-      </property>
-      <widget class="QWidget" name="GeneticAlgo_opponent">
-       <widget class="QLabel" name="label_4">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>100</y>
-          <width>251</width>
-          <height>81</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>GeneticAlgo</string>
-        </property>
-       </widget>
-      </widget>
-      <widget class="QWidget" name="DummyAlgorithm_opponent">
-       <widget class="QLabel" name="label_10">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>100</y>
-          <width>251</width>
-          <height>81</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>DummyAlgorithm</string>
-        </property>
-       </widget>
-      </widget>
-     </widget>
-    </item>
     <item row="12" column="1" alignment="Qt::AlignBottom">
      <widget class="QPushButton" name="goPrev">
       <property name="sizePolicy">
@@ -124,7 +81,7 @@
     <item row="5" column="1">
      <widget class="QStackedWidget" name="my_stackedWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="GeneticAlgo_my">
        <widget class="QLabel" name="label_3">
@@ -141,6 +98,17 @@
         </property>
        </widget>
       </widget>
+      <widget class="QWidget" name="MajorityRuleWithAbstData_my"/>
+      <widget class="QWidget" name="UseAbstMonteCarlo_my"/>
+      <widget class="QWidget" name="UseAbstractData_my"/>
+      <widget class="QWidget" name="DoubleAgentWithNash_my"/>
+      <widget class="QWidget" name="DoubleAgentWithSimpleMC_my"/>
+      <widget class="QWidget" name="DoubleAgentWithUniformMC_my"/>
+      <widget class="QWidget" name="EvaluateParam_my"/>
+      <widget class="QWidget" name="TestDoubleAgentAlgo_my"/>
+      <widget class="QWidget" name="SimpleAlgorithm_my"/>
+      <widget class="QWidget" name="MontecarloWithAlgo_my"/>
+      <widget class="QWidget" name="BeamSearch_my"/>
       <widget class="QWidget" name="DummyAlgorithm_my">
        <widget class="QLabel" name="label_9">
         <property name="geometry">
@@ -217,84 +185,6 @@
       <item>
        <property name="text">
         <string>BinaryImport</string>
-       </property>
-      </item>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QComboBox" name="selectMyAlgorithmBox">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">MyAlgorithm</string>
-      </property>
-      <item>
-       <property name="text">
-        <string>GeneticAlgo</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>MajorityRuleWithAbstData</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>UseAbstMonteCarlo</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>UseAbstractData</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>DoubleAgentWithNash</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>DoubleAgentWithSimpleMC</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>DoubleAgentWithUniformMC</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>EvaluateParam</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>TestDoubleAgentAlgo</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>SimpleAlgorithm</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>MontecarloWithAlgo</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>BeamSearch</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>DummyAlgorithm</string>
        </property>
       </item>
      </widget>
@@ -395,6 +285,138 @@
       </property>
      </widget>
     </item>
+    <item row="1" column="1">
+     <widget class="QComboBox" name="selectMyAlgorithmBox">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">MyAlgorithm</string>
+      </property>
+      <item>
+       <property name="text">
+        <string>GeneticAlgo</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>MajorityRuleWithAbstData</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>UseAbstMonteCarlo</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>UseAbstractData</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>DoubleAgentWithNash</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>DoubleAgentWithSimpleMC</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>DoubleAgentWithUniformMC</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>EvaluateParam</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>TestDoubleAgentAlgo</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>SimpleAlgorithm</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>MontecarloWithAlgo</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>BeamSearch</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>DummyAlgorithm</string>
+       </property>
+      </item>
+     </widget>
+    </item>
+    <item row="5" column="2">
+     <widget class="QStackedWidget" name="opponent_stackedWidget">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="currentIndex">
+       <number>11</number>
+      </property>
+      <widget class="QWidget" name="GeneticAlgo_opponent">
+       <widget class="QLabel" name="label_4">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>100</y>
+          <width>251</width>
+          <height>81</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>GeneticAlgo</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="MajorityRuleWithAbstData_opponent"/>
+      <widget class="QWidget" name="UseAbstMonteCarlo_opponent"/>
+      <widget class="QWidget" name="UseAbstractData_opponent"/>
+      <widget class="QWidget" name="DoubleAgentWithSimpleMC_opponent"/>
+      <widget class="QWidget" name="DoubleAgentWithUniformMC_opponent"/>
+      <widget class="QWidget" name="DoubleAgentWithNash_opponent"/>
+      <widget class="QWidget" name="EvaluateParam_opponent"/>
+      <widget class="QWidget" name="TestDoubleAgentAlgo_opponent"/>
+      <widget class="QWidget" name="SimpleAlgorithm_opponent"/>
+      <widget class="QWidget" name="MontecarloWithAlgo_opponent"/>
+      <widget class="QWidget" name="page_17"/>
+      <widget class="QWidget" name="DummyAlgorithm_opponent">
+       <widget class="QLabel" name="label_10">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>100</y>
+          <width>251</width>
+          <height>81</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>DummyAlgorithm</string>
+        </property>
+       </widget>
+      </widget>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -402,8 +424,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>928</width>
-     <height>18</height>
+     <width>969</width>
+     <height>33</height>
     </rect>
    </property>
   </widget>
